syntax = "proto3";

option go_package = "./pb";

package pb;


//model
message User {
    uint64 id = 1;
    string email = 2;
    string nickname =3;
    string handel = 4;
    int32  sex = 5;
    string avatar = 6;
    string bio = 7;
}


//req „ÄÅresp
message RegisterReq {
    string email = 1;
    string nickname = 2;
    string handel = 3;
    string password = 4;
    string authKey = 5;
    string authType = 6;
}
message RegisterResp {
    string accessToken = 1;
    int64  accessExpire = 2;
    int64  refreshAfter = 3;
}

message LoginReq {
    string  authType = 1;
    string authKey = 2;
    string  password = 3;
}
message LoginResp {
    string accessToken = 1;
    int64  accessExpire = 2;
    int64  refreshAfter = 3;
}

message GetUserInfoReq {
    int64  id = 1;
}
message GetUserInfoResp {
    User user = 1;
}





message GenerateTokenReq {
    uint64 userId = 1;
}
message GenerateTokenResp {
    string accessToken = 1;
    int64  accessExpire = 2;
    int64  refreshAfter = 3;
}

//service
service usercenter {
    rpc login(LoginReq) returns(LoginResp);
    rpc register(RegisterReq) returns(RegisterResp);
    rpc getUserInfo(GetUserInfoReq) returns(GetUserInfoResp);
    rpc generateToken(GenerateTokenReq) returns(GenerateTokenResp);
}